2006-11-13  Akim Demaille  <demaille@gostai.com>

	Adjust to libport/config.h
	* uffloat.cc: Prefix config.h symbols with LIBPORT_.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Finish importing svn sugars
	* libport.mk: Stolen from build-aux.mk.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	libport is installed by everyone
	Requested by Matthieu Nottale: all the sdks should do that
	to make sure libport is available (liburbi needs not being
	already installed).
	* libport.mk, Makefile.am: Basically revert the previous patch.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Only liburbi should install libport
	* libport.mk (libport_HEADERS, nodist_libport_HEADERS): Rename as...
	(libport_headers, nodist_libport_headers): these.
	(svn-up, svn-ci, EXTRA_HEADERS): New
	* Makefile.am (libport_HEADERS, nodist_libport_HEADERS): New.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Be ready to use libport/config.h
	* libport.mk: Create and install it.
	* ufloat.hh, thread.hh, lockable.hh, ufloat.cc: Use it.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Use config-headers-prefixed.mk
	* libport.mk: Do that.
	* Makefile.am: include init.mk.

2006-11-04  Akim Demaille  <akim@lrde.epita.fr>

	Formatting changes
	* thread.hh: here.

2006-11-03  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Fix distcheck
	* tests/Makefile.am: Fix EXTRA_FILES.

2006-11-03  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Fix test suite.

	* tests/Makefile.am: Improve the generation of config.h.

2006-11-03  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Fix test suite

	* tests/Makefile.am: config.h must be generated
	_before_ compilation.

2006-11-03  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Fix the test suite.

	* tests/Makefile.am: Fix the test suite.

2006-11-03  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Add test suite and fix somes bugs in ufloat implementation.

	* ufloat.hh: Fix macro which enables tabulated ufloat impl.